syntax = "proto3";

package api.operate;

option go_package = "./";
option java_multiple_files = true;
option java_package = "api.operate";

service App {
	// 創建內容
	rpc CreateContent (CreateContentReq) returns (CreateContentRep);
	// 內容更新
	rpc UpdateContent (UpdateContentReq) returns (UpdateContentRep);
	// 刪除內容
	rpc DeleteContent (DeleteContentReq) returns (DeleteContentRsp);
	// 內容尋找
	rpc FindContent (FindContentReq) returns (FindContentRsp);
}

message Content {
	// 內容ID
	int64 id = 1;
	// 內容標題
	string title = 2;
	// 影片URL
    string video_url = 3;
	// 作者
    string author = 4;
	// 內容描述
    string description = 5;
	// 封面URL
    string thumbnail = 6;
	// 內容分類
    string category = 7;
	// 內容時長
    string duration = 8;
	// 分辨率
    string resolution = 9;
	// 文件大小
    int64 file_size = 10;
	// 文件格式，如:MP4、AVI
    string format = 11;
	// 影片質量，1-1080P 2-640P
    int32 quality = 12;
	// 審核狀態，1-審核中 2-審核通過 3-審核失敗
    int32 approval_status = 13;
}

message CreateContentReq {
	// 內容
	Content content = 1;
}

message UpdateContentReq {
	// 內容
	Content content = 1;
}

message DeleteContentReq {
	int64 id = 1;
}

message FindContentReq {
	// 內容ID
	int64 id = 1;
	// 作者
	string author = 2;
	// 標題
	string title = 3;
	// 頁
	int32 page = 4;
	// 每頁數量
	int32 page_size = 5;
}

message CreateContentRep {}
message UpdateContentRep {}
message DeleteContentRsp {}
message FindContentRsp {
	// 內容總數
	int64 total = 1;
	// 內容
	repeated Content contents = 2;
}